2021-08-07  Bruno Haible  <bruno@clisp.org>

	Make gl_INIT_PACKAGE work with Automake >= 1.16.4.
	Reported and analyzed by Nicole Mazzuca <mazzucan@outlook.com> in
	<https://lists.gnu.org/archive/html/bug-libunistring/2021-08/msg00002.html>.
	* m4/init-package-version.m4 (gl_INIT_PACKAGE): Use a new macro
	gl_INIT_EMPTY.
	(gl_INIT_DUMMY): Expand to empty in two steps, via a new macro
	gl_INIT_DUMMY2.

2021-07-25  Bruno Haible  <bruno@clisp.org>

	u{8,16,32}-uctomb: Avoid possible trouble with huge strings.
	* doc/unistr.texi (Creating Unicode strings): Update prototypes of
	u8_uctomb, u16_uctomb, u32_uctomb to match the change in gnulib on
	2020-09-05.

2021-05-30  Bruno Haible  <bruno@clisp.org>

	Change license to LGPLv3+ or GPLv2+.
	* README (Copyright): Adjust section.
	* doc/libunistring.texi (Licenses): Change accordingly.
	* NEWS: Mention the change.

2021-04-06  Bruno Haible  <bruno@clisp.org>

	build: Fix the set of exported symbols on Alpine Linux.
	* build-aux/join-v-1: New file.
	* Makefile.am (EXTRA_DIST): Add it.
	* lib/Makefile.am (config.h): Use it instead of 'join -v 1'.

2021-02-28  Bruno Haible  <bruno@clisp.org>

	Update DEPENDENCIES.
	* DEPENDENCIES: List the normal dependencies of a package with an
	Autoconf-generated configure file. Update info regarding libiconv.

2021-01-31  Bruno Haible  <bruno@clisp.org>

	Switch to autoconf-2.71.
	* autogen.sh: Update comments.

2020-12-09  Bruno Haible  <bruno@clisp.org>

	Allow use of autoconf-2.70.
	* autogen.sh: Update comments.

2020-11-21  Bruno Haible  <bruno@clisp.org>

	build: Fix export of symbols in 64-bit mode on Windows.
	Reported by kenjiuno <h8mastre@gmail.com> in
	<https://savannah.gnu.org/bugs/?59491>.
	* woe32dll/export.h (IMP): Correct definition in 64-bit mode.

2020-09-06  Bruno Haible  <bruno@clisp.org>

	build: Add support for clang on Windows.
	* m4/woe32-dll.m4 (gl_WOE32_DLL): Set gl_cv_ld_autoimport to 'no' on
	MSVC and MSVC/clang.

2020-08-30  Bruno Haible  <bruno@clisp.org>
